fix: исправлено название переменной для z-index

--- a/src/styles/blocks/_context-menu.scss
+++ b/src/styles/blocks/_context-menu.scss
@@ -87,7 +87,7 @@
     flex-direction: column;
     gap: 16px 0;
     padding: 15px;
-    z-index: $zIndexDroplist;
+    z-index: $z-index-droplist;
   }
 
   &__droplist-item {
