--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,4 +10,4 @@ $transition-animation: .25s ease;
 $shadow-main: 0 0 6px 0 rgb(0 0 0 / 14%);
 $hover-opacity: 0.75;
 $border-light-color: #EAEAEA;
-$zIndexDroplist: 2000;
+$z-index-droplist: 2000;
